Added additional collections (employees/vehicles)
