# backend/routes/index.js
@@ -1,10 +1,14 @@
 const routes = require("express").Router();
 const clientRoute = require("./client");
 const sTicketRoute = require("./serviceticket");
+const employeeRoute = require("./employee");
+const vehicleRoute = require("./vehicle");
 
 routes.use("/", require("./swagger"))
 routes.use("/client", clientRoute)
-routes.use("/ticket", sTicketRoute);
+routes.use("/ticket", sTicketRoute)
+routes.use("/employee", employeeRoute)
+routes.use("/vehicle", vehicleRoute);
 routes.use(
     "/",
     (docData = (req, res) => {
