# backend/swagger.json
@@ -376,5 +376,325 @@
         }
       }
     }
+  },
+    "/employee/": {
+      "get": {
+        "description": "Retrieves all employees stored in the database, requires authorization to use.",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "Creates a new employee and stores it in the database, requires authorization to use.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "David"
+                },
+                "lastName": {
+                  "example": "Lee"
+                },
+                "age": {
+                  "example": "26"
+                },
+                "role": {
+                  "example": "Technician"
+                },
+                "company": {
+                  "example": "Straight 6 Performance"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Employee was created successfully"
+          },
+          "412": {
+            "description": "Validation of data failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/employee/{id}": {
+      "get": {
+        "description": "Searches for an employee by the {id}#, requires authorization to use.",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "description": "Updates a employee in the database, requires authorization to use.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "example": "David"
+                },
+                "lastName": {
+                  "example": "Lee"
+                },
+                "age": {
+                  "example": "36"
+                },
+                "role": {
+                  "example": "Senior Technician"
+                },
+                "company": {
+                  "example": "Straight 6 Performance"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Content has been updated"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Validation of data failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "Deletes an employee from the database, requires authorization to use.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "The employee was deleted from the database, requires authorization to use."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/vehicle/": {
+      "get": {
+        "description": "Retrieves all vehicles of clients stored within the database, requires authorization to use.",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "Creates a new vehicle for a client, requires authorization to use.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "clientId": {
+                  "example": "id#"
+                },
+                "firstName": {
+                  "example": "Ben"
+                },
+                "lastName": {
+                  "example": "Steele"
+                },
+                "year": {
+                  "example": "1967"
+                },
+                "make": {
+                  "example": "Chevrolet"
+                },
+                "model": {
+                  "example": "Nova"
+                },
+                "trim": {
+                  "example": "N/A"
+                },
+                "motor": {
+                  "example": "350ci"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "A new vehicle was created"
+          },
+          "412": {
+            "description": "Validation of data failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/vehicle/{id}": {
+      "get": {
+        "description": "Searches for a vehicle by the {id}#, requires authorization to use.",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "description": "Updates information about a vehicle, requires authorization to use.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "clientId": {
+                  "example": "id#"
+                },
+                "firstName": {
+                  "example": "Ben"
+                },
+                "lastName": {
+                  "example": "Steele"
+                },
+                "year": {
+                  "example": "1968"
+                },
+                "make": {
+                  "example": "Chevrolet"
+                },
+                "model": {
+                  "example": "Nova"
+                },
+                "trim": {
+                  "example": "SS"
+                },
+                "motor": {
+                  "example": "350ci"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Vehicle was updated"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Validation of data failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+    "delete": {
+      "description": "Deletes a vehicle from the database, requires authorization to use.",
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "type": "string"
+        }
+      ],
+      "responses": {
+        "204": {
+          "description": "Vehicle was deleted successfully"
+        },
+        "400": {
+          "description": "Bad Request"
+        },
+        "500": {
+          "description": "Internal Server Error"
+        }
+      }
+    }
   }
 }
